Devops/nginx-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
   app: nginx
